--- a/recipes.html
+++ b/recipes.html
@@ -29,7 +29,6 @@
             <a href="/recipes.html"><li>Recipes</li></a>
             <a href="/guides.html"><li>Guides</li></a>
             <a href="/ingredients.html"><li>Ingredients</li></a>
-            <a href="/diets.html"><li>Sort by Diet</li></a>
             <a href="/inseason.html"><li>In-Season</li></a>
           </ul>
     </div>
@@ -38,7 +37,7 @@
     <header>
         <span></span>
         <span></span>
-        <a href="/index.html"><img src="/Assets/GCLogo.svg" alt="GoodCook"></a>
+        <a href="/index.html"><img src="CSS/images/GCLogo.svg" alt="GoodCook"></a>
          <div class="topnav">
           <input type="text" id="search-input" placeholder="Search..">
         </div> 
