--- a/guides.html
+++ b/guides.html
@@ -4,20 +4,25 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title></title>
-    <meta name="GoodCook Recipes" content="">
+    <meta name="GoodCook Recipes" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/CSS/stylesheet.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Lora&display=swap"
-      rel="stylesheet" />
+      rel="stylesheet"
+    />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src='jsfile.js'></script>
+    <script src="jsfile.js"></script>
+    <script
+      src="https://kit.fontawesome.com/f721fcd643.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
-<body>
-      <!-- Sidebar -->
+  <body>
+    <!-- Sidebar -->
     <div id="sidebar">
       <div class="toggle-btn" onclick="show()">
         <span></span>
@@ -25,39 +30,127 @@
         <span></span>
         <span></span>
       </div>
-          <ul>
-            <a href="/recipes.html"><li>Recipes</li></a>
-            <a href="/guides.html"><li>Guides</li></a>
-            <a href="/ingredients.html"><li>Ingredients</li></a>
-            <a href="/inseason.html"><li>In-Season</li></a>
-          </ul>
+      <ul>
+        <a href="/recipes.html"><li>Recipes</li></a>
+        <a href="/guides.html"><li>Guides</li></a>
+        <a href="/ingredients.html"><li>Ingredients</li></a>
+        <a href="/inseason.html"><li>In-Season</li></a>
+      </ul>
     </div>
 
-      <!-- Header -->
+    <!-- Header -->
     <header>
-        <span></span>
-        <span></span>
-        <a href="/index.html"><img src="CSS/images/GCLogo.svg" alt="GoodCook"></a>
-         <div class="topnav">
-          <input type="text" id="search-input" placeholder="Search..">
-        </div> 
-        <!-- Searchbox Demo -->
-        <script>
-          document.addEventListener("DOMContentLoaded", function() {
-              var searchInput = document.getElementById("search-input");
+      <span></span>
+      <span></span>
+      <a href="/index.html"
+        ><img src="CSS/images/GCLogo.svg" alt="GoodCook"
+      /></a>
+      <div class="topnav">
+        <input type="text" id="search-input" placeholder="Search.." />
+      </div>
+      <!-- Searchbox Demo -->
+      <script>
+        document.addEventListener("DOMContentLoaded", function () {
+          var searchInput = document.getElementById("search-input");
 
-              searchInput.addEventListener("keydown", function(event) {
-                  if (event.key === "Enter") {
-                      event.preventDefault(); 
-                      alert("Search Function Unavailable Currently ):");
-                  }
-              });
+          searchInput.addEventListener("keydown", function (event) {
+            if (event.key === "Enter") {
+              event.preventDefault();
+              alert("Search Function Unavailable Currently ):");
+            }
           });
-        </script>
-
+        });
+      </script>
     </header>
 
-    <!-- Hero -->
+    <!-- Guides Grid -->
 
+    <div class="guides-grid-container">
+      <div class="guides-item" id="guides1-griditem1">
+        <div class="guides-griditem-header">
+          <h1>
+            Knife Chronicles: Blades Unveiled <span></span>
+            <i class="fa-solid fa-arrow-right"></i>
+          </h1>
+        </div>
+        <div class="guides-griditem-description">
+          <p>
+            From chef's to paring, journey through the blade realm. Discover
+            which knife suits your culinary quest for precision, versatility,
+            and effortless chopping.
+          </p>
+        </div>
+      </div>
+      <div class="guides-item" id="guides1-griditem2">
+        <div class="guides-griditem-header">
+          <h1>
+            Produce Perfection Handbook<span></span>
+            <i class="fa-solid fa-arrow-right"></i>
+          </h1>
+        </div>
+        <div class="guides-griditem-description">
+          <p>
+            Master the art of selection with tips on color, texture, and aroma.
+            Unearth the freshest gems for vibrant, flavorful dishes every time.
+          </p>
+        </div>
+      </div>
+      <div class="guides-item" id="guides1-griditem3">
+        <div class="guides-griditem-header">
+          <h1>
+            The Ultimate Guide to Sous Vide<span></span>
+            <i class="fa-solid fa-arrow-right"></i>
+          </h1>
+        </div>
+        <div class="guides-griditem-description">
+          <p>
+            Unlock sous vide secrets! This guide demystifies precision cooking,
+            ensuring your meals reach new heights of tenderness, flavor, and
+            perfection.
+          </p>
+        </div>
+      </div>
+      <div class="guides-item" id="guides1-griditem4">
+        <div class="guides-griditem-header">
+          <h1>
+            Salt Almanac: Exploring Varieties<span></span>
+            <i class="fa-solid fa-arrow-right"></i>
+          </h1>
+        </div>
+        <div class="guides-griditem-description">
+          <p>
+            Delve into the world of salt—from Himalayan pink to flaky Maldon.
+            Elevate your dishes with diverse textures, flavors, and culinary
+            magic.
+          </p>
+        </div>
+      </div>
+    </div>
+    <!-- Footer -->
+    <footer>
+      <img src="/CSS/images/GCLogo.svg" alt="GoodCook 2023" />
+      <p>Get fresh recipes, cooking tips, and more!</p>
+      <div class="bottomemail">
+        <input type="text" id="email-input" placeholder="Enter Email" />
+      </div>
+      <div class="link-container">
+        <a href="#"><h4>About •</h4></a>
+        <a href="#"><h4>Contact Us •</h4></a>
+        <a href="#"><h4>Submit A Recipe •</h4></a>
+        <a href="#"><h4>Privacy Policy</h4></a>
+      </div>
+      <script>
+        document.addEventListener("DOMContentLoaded", function () {
+          var searchInput = document.getElementById("email-input");
 
-</body>
+          searchInput.addEventListener("keydown", function (event) {
+            if (event.key === "Enter") {
+              event.preventDefault();
+              alert("Email Subscription Unavailable ):");
+            }
+          });
+        });
+      </script>
+    </footer>
+  </body>
+</html>
