--- a/recipes.html
+++ b/recipes.html
@@ -39,7 +39,7 @@
       <span></span>
       <span></span>
       <a href="/index.html"
-        ><img src="CSS/images/GCLogo.svg" alt="GoodCook"
+        ><img src="images/GCLogo.svg" alt="GoodCook"
       /></a>
       <div class="topnav">
         <input type="text" id="search-input" placeholder="Search.." />
@@ -101,7 +101,7 @@
 
     <!-- Footer -->
     <footer>
-      <img src="/CSS/images/GCLogo.svg" alt="GoodCook 2023" />
+      <img src="images/GCLogo.svg" alt="GoodCook 2023" />
       <p>Get fresh recipes, cooking tips, and more!</p>
       <div class="bottomemail">
         <input type="text" id="email-input" placeholder="Enter Email" />
