--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 
     <div class="mobile-menu">
       <ul>
-        <a href="/recipes.html"><li>Recipes</li></a>
-        <a href="/guides.html"><li>Guides</li></a>
+        <a href="recipes.html"><li>Recipes</li></a>
+        <a href="FinalAssignment/guides.html"><li>Guides</li></a>
         <a href="/ingredients.html"><li>Ingredients</li></a>
         <a href="/diets.html"><li>Sort by Diet</li></a>
         <a href="/inseason.html"><li>In-Season</li></a>
