--- a/inseason.html
+++ b/inseason.html
@@ -43,7 +43,7 @@
       <span></span>
       <span></span>
       <a href="/index.html"
-        ><img src="CSS/images/GCLogo.svg" alt="GoodCook"
+        ><img src="images/GCLogo.svg" alt="GoodCook"
       /></a>
       <div class="topnav">
         <input type="text" id="search-input" placeholder="Search.." />
@@ -79,7 +79,7 @@
     </div>
 
     <footer>
-      <img src="/CSS/images/GCLogo.svg" alt="GoodCook 2023" />
+      <img src="images/GCLogo.svg" alt="GoodCook 2023" />
       <p>Get fresh recipes, cooking tips, and more!</p>
       <div class="bottomemail">
         <input type="text" id="email-input" placeholder="Enter Email" />
