--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
         <span></span>
       </div>
       <ul>
-        <a href="/recipes.html"><li>Recipes</li></a>
-        <a href="/guides.html"><li>Guides</li></a>
-        <a href="/ingredients.html"><li>Ingredients</li></a>
-        <a href="/inseason.html"><li>In-Season</li></a>
+        <a href="recipes.html"><li>Recipes</li></a>
+        <a href="guides.html"><li>Guides</li></a>
+        <a href="ingredients.html"><li>Ingredients</li></a>
+        <a href="inseason.html"><li>In-Season</li></a>
       </ul>
     </div>
 
