--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <header>
       <span id="span1"></span>
       <span id="span2"></span>
-      <a href="index.html"><img src="images/GCLogo.svg" id='Logo1' alt="GoodCook"/></a>
+      <a href="https://copythatcat.github.io/FinalAssignment/"><img src="images/GCLogo.svg" id='Logo1' alt="GoodCook"/></a>
       <div class="topnav">
         <input type="text" id="search-input" placeholder="Search.." />
       </div>
