--- a/ingredients.html
+++ b/ingredients.html
@@ -38,7 +38,7 @@
     <header>
       <span></span>
       <span></span>
-      <a href="/index.html"
+      <a href="https://copythatcat.github.io/FinalAssignment/"
         ><img src="images/GCLogo.svg" alt="GoodCook"
       /></a>
       <div class="topnav">
