--- a/inseason.html
+++ b/inseason.html
@@ -6,7 +6,7 @@
     <title></title>
     <meta name="GoodCook Recipes" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="/CSS/stylesheet.css" />
+    <link rel="stylesheet" href="CSS/stylesheet.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -31,10 +31,10 @@
         <span></span>
       </div>
       <ul>
-        <a href="/recipes.html"><li>Recipes</li></a>
-        <a href="/guides.html"><li>Guides</li></a>
-        <a href="/ingredients.html"><li>Ingredients</li></a>
-        <a href="/inseason.html"><li>In-Season</li></a>
+        <a href="recipes.html"><li>Recipes</li></a>
+        <a href="guides.html"><li>Guides</li></a>
+        <a href="ingredients.html"><li>Ingredients</li></a>
+        <a href="inseason.html"><li>In-Season</li></a>
       </ul>
     </div>
 
