Final link issues are fixed

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <!-- Hero -->
 
     <div class="hero-container">
-      <img src="images/Dish5.jpg" alt="Salmon Bowl"/>
+      <img src="CSS/images/Dish5.jpg" alt="Salmon Bowl"/>
       <div class="banner" id="banner1">
         <span><h3>new recipe - salmon bowl</h3></span>
       </div>
@@ -102,7 +102,7 @@
     <!-- Mobile Hero -->
 
     <div class="hero-showcase-mobile">
-      <img src="/CSS/images/Dish5.jpg" alt="Salmon Bowl"/>
+      <img src="CSS/images/Dish5.jpg" alt="Salmon Bowl"/>
       <a href=""><h1>Teriyaki Salmon Bowl</h1></a>
       <a href=""><p>
         Savor our Teriyaki Salmon Bowl: Grilled salmon glazed in teriyaki
