Adding extra final touches

--- a/guides.html
+++ b/guides.html
@@ -134,10 +134,10 @@
         <input type="text" id="email-input" placeholder="Enter Email" />
       </div>
       <div class="link-container">
-        <a href="#"><h4>About •</h4></a>
-        <a href="#"><h4>Contact Us •</h4></a>
-        <a href="#"><h4>Submit A Recipe •</h4></a>
-        <a href="#"><h4>Privacy Policy</h4></a>
+        <a href="error.html"><h4>About •</h4></a>
+        <a href="error.html"><h4>Contact Us •</h4></a>
+        <a href="error.html"><h4>Submit A Recipe •</h4></a>
+        <a href="error.html"><h4>Privacy Policy</h4></a>
       </div>
       <script>
         document.addEventListener("DOMContentLoaded", function () {
