--- a/inseason.html
+++ b/inseason.html
@@ -65,16 +65,16 @@
 
     <div class="inseason-flex-container">
       <div class="inseason-box" id="spring-box">
-        <h1>Spring <i class="fa-regular fa-sun"></i></h1>
+        <a href="spring.html"><h1>Spring <i class="fa-regular fa-sun"></i></h1></a> 
       </div>
       <div class="inseason-box" id="summer-box">
-        <h1>Summer <i class="fa-solid fa-leaf"></i></h1>
+        <a href="summer.html"><h1>Summer <i class="fa-solid fa-leaf"></i></h1></a>
       </div>
       <div class="inseason-box" id="fall-box">
-        <h1>Autumn<i class="fa-solid fa-cloud-rain"></i></h1>
+        <a href="fall.html"><h1>Autumn<i class="fa-solid fa-cloud-rain"></i></h1></a>
       </div>
       <div class="inseason-box" id="winter-box">
-        <h1>Winter <i class="fa-solid fa-snowflake"></i></h1>
+        <a href="winter.html"><h1>Winter <i class="fa-solid fa-snowflake"></i></h1></a>
       </div>
     </div>
 
@@ -85,10 +85,10 @@
         <input type="text" id="email-input" placeholder="Enter Email" />
       </div>
       <div class="link-container">
-        <a href="#"><h4>About •</h4></a>
-        <a href="#"><h4>Contact Us •</h4></a>
-        <a href="#"><h4>Submit A Recipe •</h4></a>
-        <a href="#"><h4>Privacy Policy</h4></a>
+        <a href="error.html"><h4>About •</h4></a>
+        <a href="error.html"><h4>Contact Us •</h4></a>
+        <a href="error.html"><h4>Submit A Recipe •</h4></a>
+        <a href="error.html"><h4>Privacy Policy</h4></a>
       </div>
       <script>
         document.addEventListener("DOMContentLoaded", function () {
