--- a/recipedemo.html
+++ b/recipedemo.html
@@ -42,7 +42,9 @@
     <header>
       <span id="span1"></span>
       <span id="span2"></span>
-      <a href="https://copythatcat.github.io/FinalAssignment/"><img src="CSS/images/GCLogo.svg" id='Logo1' alt="GoodCook"/></a>
+      <a href="https://copythatcat.github.io/FinalAssignment/"
+        ><img src="CSS/images/GCLogo.svg" id="Logo1" alt="GoodCook"
+      /></a>
       <div class="topnav">
         <input type="text" id="search-input" placeholder="Search.." />
       </div>
@@ -76,14 +78,10 @@
     <!-- Hero -->
 
     <div class="hero-container">
-      <img src="CSS/images/Dish5.jpg" alt="Salmon Bowl"/>
-      <div class="banner" id="banner1">
-        <span><h3>new recipe</h3></span>
-      </div>
-
+      <img src="CSS/images/Dish5.jpg" alt="Salmon Bowl" />
       <div class="hero-showcase-grid">
         <div class="item hero1-griditem1">
-          <a href="recipedemo.html"><h1>Teriyaki Salmon Bowl</h1></a>
+          <a href="#"><h1>Teriyaki Salmon Bowl</h1></a>
         </div>
         <div class="item hero1-griditem2">
           <p>
@@ -99,45 +97,61 @@
       </div>
     </div>
 
+    <div class="recipe-info-ingredients">
+      <h2>Ingredients</h2>
+      <ul>
+        <li>8oz of Salmon</li>
+        <li>1 Can of Canned Corn</li>
+        <li>2 Eggs</li>
+        <li>Edamame Beans</li>
+        <li>1/2 a Roma Tomato</li>
+        <li>1/2 of a Cucumber</li>
+        <li>4oz of Red Cabbage</li>
+        <li>About 4 Lettuce Leafs</li>
+      </ul>
+    </div>
+
+    <div class="recipe-info-steps">
+      <p>
+        Step 1. Season fresh salmon fillets with salt, pepper, and a dash of
+        lemon juice. Pre-heat a large pan and drizzle with oil that has a high
+        smoke-point. Pan-sear on medium high until the edges are golden, and the
+        center is flaky, about 4 minutes each side. Though you may be tempted to
+        lift up the salmon, try your best to let it sear completely to achieve a
+        crunchy skin.
+      </p>
+      <p>
+        Step 2. In the meantime, set a pot of water and bring to a rolling boil.
+        Gently place two eggs in boiling water. Cook for exactly 6 minutes for a
+        perfect soft boil. Transfer to an ice bath to cool, then peel and set
+        aside.
+      </p>
+      <p>
+        Step 3. Once the Salmon is finished cooking, set aside on a plate to rest. Grab your red cabbage and cucumber and thinly slice them. Set them aside.
+      </p>
+      <p>
+        Step 4. Arrange the veggie medley at the base of the
+        bowl. Take your salmon and slice into 2 inch chunks. Place a perfectly grilled salmon fillet on top. Take your two soft boiled eggs and slice them in quarters. Delicately
+        nestle the soft-boiled eggs alongside.
+      </p>
+      <p>
+        Step 5. Finish by drizzling a zesty dressing over the bowl. Choose a
+        light lemon vinaigrette or a creamy dill sauce.
+      </p>
+    </div>
+
     <!-- Mobile Hero -->
 
     <div class="hero-showcase-mobile">
-      <img src="CSS/images/Dish5.jpg" alt="Salmon Bowl"/>
+      <img src="CSS/images/Dish5.jpg" alt="Salmon Bowl" />
       <a href=""><h1>Teriyaki Salmon Bowl</h1></a>
-      <a href=""><p>
-        Savor our Teriyaki Salmon Bowl: Grilled salmon glazed in teriyaki
-        perfection, served on rice with corn, boiled egg, and edamame. A
-        delicious, wholesome dish that comes together in less than 30
-        minutes.
-      </p></a>
-    </div>
-
-    <!-- The Latest Container -->
-
-    <div class="thelatest-container">
-      <h1 class="thelatest">The Latest</h1>
-      <img src="CSS/images/squiggle.svg" alt="squiggle decoation" />
-    </div>
-
-    <div class="thelatest-container-grid">
-      <div class="thelatest-item" id="recipe1-griditem1">
-        <a href=""><h1>Pesto Hummus</h1></a>
-      </div>
-      <div class="thelatest-item" id="recipe1-griditem2">
-        <a href=""><h1>Swedish Meatballs</h1></a>
-      </div>
-      <div class="thelatest-item" id="recipe1-griditem3">
-        <a href=""><h1>Club Sandwich</h1></a>
-      </div>
-      <div class="thelatest-item" id="recipe1-griditem4">
-        <a href=""><h1>Belgian Waffles</h1></a>
-      </div>
-      <div class="thelatest-item" id="recipe1-griditem5">
-        <a href=""><h1>Thai Chili Soup</h1></a>
-      </div>
-      <div class="thelatest-item" id="recipe1-griditem6">
-        <a href=""><h1>Lamb and Chicken Kebabs</h1></a>
-      </div>
+      <a href=""
+        ><p>
+          Savor our Teriyaki Salmon Bowl: Grilled salmon glazed in teriyaki
+          perfection, served on rice with corn, boiled egg, and edamame. A
+          delicious, wholesome dish that comes together in less than 30 minutes.
+        </p></a
+      >
     </div>
 
     <!-- Footer -->
