--- a/recipes.html
+++ b/recipes.html
@@ -59,6 +59,11 @@
       </script>
     </header>
 
+    <div class="thelatest-container">
+      <h1 class="thelatest">Our Latest and Greatest</h1>
+      <img src="CSS/images/squiggle.svg" alt="squiggle decoation" />
+    </div>
+
     <!-- Recipes -->
     <div class="recipes-container-grid">
       <div class="recipes-item" id="recipes-griditem1">
@@ -107,10 +112,10 @@
         <input type="text" id="email-input" placeholder="Enter Email" />
       </div>
       <div class="link-container">
-        <a href="#"><h4>About •</h4></a>
-        <a href="#"><h4>Contact Us •</h4></a>
-        <a href="#"><h4>Submit A Recipe •</h4></a>
-        <a href="#"><h4>Privacy Policy</h4></a>
+        <a href="error.html"><h4>About •</h4></a>
+        <a href="error.html"><h4>Contact Us •</h4></a>
+        <a href="error.html"><h4>Submit A Recipe •</h4></a>
+        <a href="error.html"><h4>Privacy Policy</h4></a>
       </div>
       <script>
         document.addEventListener("DOMContentLoaded", function () {
