--- a/spring.html
+++ b/spring.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title></title>
-    <meta name="GoodCook Recipes" content="" />
+    <meta name="GoodCook Recipes" content="Spring Recipes" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="CSS/stylesheet.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -59,62 +59,62 @@
       </script>
     </header>
 
-    <!-- Ingredients -->
-    <div class="ingredients-list">
-      <h1>Dive into your next dish:</h1>
-      <ul>
-        <li>Tomatoes</li>
-        <li>Onions</li>
-        <li>Garlic</li>
-        <li>Bell Peppers</li>
-        <li>Carrots</li>
-        <li>Broccoli</li>
-        <li>Chicken</li>
-        <li>Beef</li>
-        <li>Pork</li>
-        <li>Salmon</li>
-        <li>Shrimp</li>
-        <li>Spinach</li>
-        <li>Kale</li>
-        <li>Potatoes</li>
-        <li>Sweet Potatoes</li>
-        <li>Avocado</li>
-        <li>Strawberries</li>
-        <li>Blueberries</li>
-        <li>Apples</li>
-        <li>Oranges</li>
-        <li>Lemons</li>
-        <li>Limes</li>
-        <li>Garlic Powder</li>
-        <li>Cumin</li>
-        <li>Paprika</li>
-        <li>Black Pepper</li>
-        <li>Paprika</li>
-        <li>Olive Oil</li>
-        <li>Balsamic Vinegar</li>
-        <li>Cucumber</li>
-        <li>Cherry Tomatoes</li>
-        <li>Zucchini</li>
-        <li>Eggs</li>
-        <li>Cheddar Cheese</li>
-        <li>Parmesan Cheese</li>
-        <li>Coriander</li>
-        <li>Cilantro</li>
-        <li>Thyme</li>
-        <li>Rosemary</li>
-        <li>Quinoa</li>
-        <li>Walnuts</li>
-        <li>Honey</li>
-        <li>Dijon Mustard</li>
-        <li>Cayenne Pepper</li>
-        <li>Cinnamon</li>
-        <li>Nutmeg</li>
-        <li>Vanilla Extract</li>
-        <li>Chickpeas</li>
-        <li>Soy Sauce</li>
-        <li>Ginger</li>
-        <li>Bay Leaves</li>
-      </ul>
+    <div class="sp-ingredients-list">
+        <h1>Here's what in store for Spring in: <button id="sp-button">California!</button></h1>
+        <ul>
+          <li>Asparagus</li>
+          <li>Peas</li>
+          <li>Artichokes</li>
+          <li>Spinach</li>
+          <li>Arugula</li>
+          <li>Radishes</li>
+          <li>Green Onions</li>
+          <li>Carrots</li>
+          <li>Strawberries</li>
+          <li>Rhubarb</li>
+          <li>Lettuce</li>
+          <li>Broccoli</li>
+        </ul>
+    </div>
+
+    <!-- Recipes -->
+    <div class="sp-recipes-container-grid">
+      <div class="sp-recipes-item" id="sp-recipes-griditem1">
+        <a href=""><h1>White Bean Ragu</h1></a>
+      </div>
+      <div class="sp-recipes-item" id="sp-recipes-griditem2">
+        <a href=""><h1>Arepas</h1></a>
+      </div>
+      <div class="sp-recipes-item" id="sp-recipes-griditem3">
+        <a href=""><h1>Shrimp Medley</h1></a>
+      </div>
+      <div class="sp-recipes-item" id="sp-recipes-griditem4">
+        <a href=""><h1>Guide: Greens Galore</h1><p>Elevate your culinary skills with our guide, offering 25 recipes for delectable and nutritious leafy green dishes, perfect for the refreshing spring season. Master the art of leafy greens!</p></a>
+      </div>
+      <div class="sp-recipes-item" id="sp-recipes-griditem5">
+        <a href=""><h1>Potato Stew</h1></a>
+      </div>
+      <div class="sp-recipes-item" id="sp-recipes-griditem6">
+        <a href=""><h1>Guide: Ocean Harvest Mastery</h1><p>We get it, cooking fish is intimidating! But have no fear, dive into a world of exquisite flavors with our guide, perfecting your springtime fish culinary adventures for a fresh and delightful dining experience by the sea.</p></a>
+      </div>
+      <div class="sp-recipes-item" id="sp-recipes-griditem7">
+        <a href=""><h1>Ragu al Bafo</h1></a>
+      </div>
+      <div class="sp-recipes-item" id="sp-recipes-griditem8">
+        <a href=""><h1>French Omelette</h1></a>
+      </div>
+      <div class="sp-recipes-item" id="sp-recipes-griditem9">
+        <a href=""><h1>Chicken Marsala</h1></a>
+      </div>
+      <div class="sp-recipes-item" id="sp-recipes-griditem10">
+        <a href=""><h1>Papri Chaat</h1></a>
+      </div>
+      <div class="sp-recipes-item" id="sp-recipes-griditem11">
+        <a href=""><h1>Green Bean Casserole</h1></a>
+      </div>
+      <div class="sp-recipes-item" id="sp-recipes-griditem12">
+        <a href=""><h1>Cast Iron Pizza</h1></a>
+      </div>
     </div>
 
     <!-- Footer -->
