--- a/summer.html
+++ b/summer.html
@@ -59,62 +59,63 @@
       </script>
     </header>
 
-    <!-- Ingredients -->
-    <div class="ingredients-list">
-      <h1>Dive into your next dish:</h1>
-      <ul>
-        <li>Tomatoes</li>
-        <li>Onions</li>
-        <li>Garlic</li>
-        <li>Bell Peppers</li>
-        <li>Carrots</li>
-        <li>Broccoli</li>
-        <li>Chicken</li>
-        <li>Beef</li>
-        <li>Pork</li>
-        <li>Salmon</li>
-        <li>Shrimp</li>
-        <li>Spinach</li>
-        <li>Kale</li>
-        <li>Potatoes</li>
-        <li>Sweet Potatoes</li>
-        <li>Avocado</li>
-        <li>Strawberries</li>
-        <li>Blueberries</li>
-        <li>Apples</li>
-        <li>Oranges</li>
-        <li>Lemons</li>
-        <li>Limes</li>
-        <li>Garlic Powder</li>
-        <li>Cumin</li>
-        <li>Paprika</li>
-        <li>Black Pepper</li>
-        <li>Paprika</li>
-        <li>Olive Oil</li>
-        <li>Balsamic Vinegar</li>
-        <li>Cucumber</li>
-        <li>Cherry Tomatoes</li>
-        <li>Zucchini</li>
-        <li>Eggs</li>
-        <li>Cheddar Cheese</li>
-        <li>Parmesan Cheese</li>
-        <li>Coriander</li>
-        <li>Cilantro</li>
-        <li>Thyme</li>
-        <li>Rosemary</li>
-        <li>Quinoa</li>
-        <li>Walnuts</li>
-        <li>Honey</li>
-        <li>Dijon Mustard</li>
-        <li>Cayenne Pepper</li>
-        <li>Cinnamon</li>
-        <li>Nutmeg</li>
-        <li>Vanilla Extract</li>
-        <li>Chickpeas</li>
-        <li>Soy Sauce</li>
-        <li>Ginger</li>
-        <li>Bay Leaves</li>
-      </ul>
+    <div class="sum-ingredients-list">
+        <h1>Here's what in store for Summer in: <button id="sum-button">California!</button></h1>
+        <ul>
+            <li>Tomatoes</li>
+            <li>Cucumbers</li>
+            <li>Zucchini</li>
+            <li>Yellow Squash</li>
+            <li>Bell Peppers</li>
+            <li>Eggplant</li>
+            <li>Corn</li>
+            <li>Green Beans</li>
+            <li>Okra</li>
+            <li>Radishes</li>
+            <li>Carrots</li>
+            <li>Spinach</li>
+            <li>Lettuce</li>
+        </ul>
+    </div>
+
+    <!-- Recipes -->
+    <div class="sp-recipes-container-grid">
+      <div class="sum-recipes-item" id="sum-recipes-griditem1">
+        <a href=""><h1>Poached Peaches</h1></a>
+      </div>
+      <div class="sum-recipes-item" id="sum-recipes-griditem2">
+        <a href=""><h1>Broccoli and Beef</h1></a>
+      </div>
+      <div class="sum-recipes-item" id="sum-recipes-griditem3">
+        <a href=""><h1>Chicken Caprese</h1></a>
+      </div>
+      <div class="sum-recipes-item" id="sum-recipes-griditem4">
+        <a href=""><h1>Guide: Sous Vide Simplified</h1><p>Master the art of precision cooking with sous vide. Learn to create perfectly cooked dishes with this water bath technique</p></a>
+      </div>
+      <div class="sum-recipes-item" id="sum-recipes-griditem5">
+        <a href=""><h1>Penne alla Vodka</h1></a>
+      </div>
+      <div class="sum-recipes-item" id="sum-recipes-griditem6">
+        <a href=""><h1>Guide: Stir-Fry Wizardry</h1><p>Explore the magic of stir-frying. From wok essentials to flavor combinations, discover how to create quick, delicious, and vibrant stir-fry dishes</p></a>
+      </div>
+      <div class="sum-recipes-item" id="sum-recipes-griditem7">
+        <a href=""><h1>Frosted Brownie</h1></a>
+      </div>
+      <div class="sum-recipes-item" id="sum-recipes-griditem8">
+        <a href=""><h1>Rhubarb Pie</h1></a>
+      </div>
+      <div class="sum-recipes-item" id="sum-recipes-griditem9">
+        <a href=""><h1>Braised Beef</h1></a>
+      </div>
+      <div class="sum-recipes-item" id="sum-recipes-griditem10">
+        <a href=""><h1>Cuban Chicken</h1></a>
+      </div>
+      <div class="sum-recipes-item" id="sum-recipes-griditem11">
+        <a href=""><h1>Ukrainian-style Eggs</h1></a>
+      </div>
+      <div class="sum-recipes-item" id="sum-recipes-griditem12">
+        <a href=""><h1>Hong Shau Rau</h1></a>
+      </div>
     </div>
 
     <!-- Footer -->
