--- a/winter.html
+++ b/winter.html
@@ -59,62 +59,63 @@
       </script>
     </header>
 
-    <!-- Ingredients -->
-    <div class="ingredients-list">
-      <h1>Dive into your next dish:</h1>
-      <ul>
-        <li>Tomatoes</li>
-        <li>Onions</li>
-        <li>Garlic</li>
-        <li>Bell Peppers</li>
-        <li>Carrots</li>
-        <li>Broccoli</li>
-        <li>Chicken</li>
-        <li>Beef</li>
-        <li>Pork</li>
-        <li>Salmon</li>
-        <li>Shrimp</li>
-        <li>Spinach</li>
-        <li>Kale</li>
-        <li>Potatoes</li>
-        <li>Sweet Potatoes</li>
-        <li>Avocado</li>
-        <li>Strawberries</li>
-        <li>Blueberries</li>
-        <li>Apples</li>
-        <li>Oranges</li>
-        <li>Lemons</li>
-        <li>Limes</li>
-        <li>Garlic Powder</li>
-        <li>Cumin</li>
-        <li>Paprika</li>
-        <li>Black Pepper</li>
-        <li>Paprika</li>
-        <li>Olive Oil</li>
-        <li>Balsamic Vinegar</li>
-        <li>Cucumber</li>
-        <li>Cherry Tomatoes</li>
-        <li>Zucchini</li>
-        <li>Eggs</li>
-        <li>Cheddar Cheese</li>
-        <li>Parmesan Cheese</li>
-        <li>Coriander</li>
-        <li>Cilantro</li>
-        <li>Thyme</li>
-        <li>Rosemary</li>
-        <li>Quinoa</li>
-        <li>Walnuts</li>
-        <li>Honey</li>
-        <li>Dijon Mustard</li>
-        <li>Cayenne Pepper</li>
-        <li>Cinnamon</li>
-        <li>Nutmeg</li>
-        <li>Vanilla Extract</li>
-        <li>Chickpeas</li>
-        <li>Soy Sauce</li>
-        <li>Ginger</li>
-        <li>Bay Leaves</li>
-      </ul>
+    <div class="win-ingredients-list">
+        <h1>Here's what in store for Winter in: <button id="win-button">California!</button></h1>
+        <ul>
+            <li>Brussels Sprouts</li>
+            <li>Cabbage</li>
+            <li>Carrots</li>
+            <li>Cauliflower</li>
+            <li>Celery</li>
+            <li>Kale</li>
+            <li>Leeks</li>
+            <li>Parsnips</li>
+            <li>Potatoes</li>
+            <li>Rutabaga</li>
+            <li>Turnips</li>
+            <li>Winter Squash</li>
+            <li>Radishes</li>
+        </ul>
+    </div>
+
+    <!-- Recipes -->
+    <div class="win-recipes-container-grid">
+      <div class="win-recipes-item" id="win-recipes-griditem1">
+        <a href=""><h1>Tacos de Pollo</h1></a>
+      </div>
+      <div class="win-recipes-item" id="win-recipes-griditem2">
+        <a href=""><h1>Leftovers Casserole</h1></a>
+      </div>
+      <div class="win-recipes-item" id="win-recipes-griditem3">
+        <a href=""><h1>Leek Soup</h1></a>
+      </div>
+      <div class="win-recipes-item" id="win-recipes-griditem4">
+        <a href=""><h1>Knife Skills 101: Precision in Every Slice</h1><p>Sharpen your knife skills and enhance kitchen efficiency. Learn proper techniques for chopping, dicing, and slicing to elevate your culinary prowess.</p></a>
+      </div>
+      <div class="win-recipes-item" id="win-recipes-griditem5">
+        <a href=""><h1>Caeser Salad</h1></a>
+      </div>
+      <div class="win-recipes-item" id="win-recipes-griditem6">
+        <a href=""><h1>Flavor Fusion: The Art of Pairing Spices</h1><p>Spice up your dishes with confidence. Discover the world of spice pairing, balancing flavors, and creating culinary masterpieces with aromatic and bold spices.</p></a>
+      </div>
+      <div class="win-recipes-item" id="win-recipes-griditem7">
+        <a href=""><h1>Hearty Winter Bowl</h1></a>
+      </div>
+      <div class="win-recipes-item" id="win-recipes-griditem8">
+        <a href=""><h1>Breakfast Platter</h1></a>
+      </div>
+      <div class="win-recipes-item" id="win-recipes-griditem9">
+        <a href=""><h1>Tomato Bruschetta</h1></a>
+      </div>
+      <div class="win-recipes-item" id="win-recipes-griditem10">
+        <a href=""><h1>Spicy Beef Larb</h1></a>
+      </div>
+      <div class="win-recipes-item" id="win-recipes-griditem11">
+        <a href=""><h1>Slow Roasted Meatballs</h1></a>
+      </div>
+      <div class="win-recipes-item" id="win-recipes-griditem12">
+        <a href=""><h1>Spicy Green Medley</h1></a>
+      </div>
     </div>
 
     <!-- Footer -->
