--- a/error.html
+++ b/error.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title></title>
-    <meta name="GoodCook Recipes" content="" />
+    <title>GoodCook</title>
+    <meta name="GoodCook" content="GoodCook Recipes and More!" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="CSS/stylesheet.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -15,6 +15,10 @@
     />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="jsfile.js"></script>
+    <script
+      src="https://kit.fontawesome.com/f721fcd643.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
@@ -36,11 +40,9 @@
 
     <!-- Header -->
     <header>
-      <span></span>
-      <span></span>
-      <a href="https://copythatcat.github.io/FinalAssignment/"
-        ><img src="CSS/images/GCLogo.svg" alt="GoodCook"
-      /></a>
+      <span id="span1"></span>
+      <span id="span2"></span>
+      <a href="https://copythatcat.github.io/FinalAssignment/"><img src="CSS/images/GCLogo.svg" id='Logo1' alt="GoodCook"/></a>
       <div class="topnav">
         <input type="text" id="search-input" placeholder="Search.." />
       </div>
@@ -59,65 +61,24 @@
       </script>
     </header>
 
-    <!-- Ingredients -->
-    <div class="ingredients-list">
-      <h1>Dive into your next dish:</h1>
+    <!-- Mobile Menu -->
+
+    <div class="mobile-menu">
       <ul>
-        <li>Tomatoes</li>
-        <li>Onions</li>
-        <li>Garlic</li>
-        <li>Bell Peppers</li>
-        <li>Carrots</li>
-        <li>Broccoli</li>
-        <li>Chicken</li>
-        <li>Beef</li>
-        <li>Pork</li>
-        <li>Salmon</li>
-        <li>Shrimp</li>
-        <li>Spinach</li>
-        <li>Kale</li>
-        <li>Potatoes</li>
-        <li>Sweet Potatoes</li>
-        <li>Avocado</li>
-        <li>Strawberries</li>
-        <li>Blueberries</li>
-        <li>Apples</li>
-        <li>Oranges</li>
-        <li>Lemons</li>
-        <li>Limes</li>
-        <li>Garlic Powder</li>
-        <li>Cumin</li>
-        <li>Paprika</li>
-        <li>Black Pepper</li>
-        <li>Paprika</li>
-        <li>Olive Oil</li>
-        <li>Balsamic Vinegar</li>
-        <li>Cucumber</li>
-        <li>Cherry Tomatoes</li>
-        <li>Zucchini</li>
-        <li>Eggs</li>
-        <li>Cheddar Cheese</li>
-        <li>Parmesan Cheese</li>
-        <li>Coriander</li>
-        <li>Cilantro</li>
-        <li>Thyme</li>
-        <li>Rosemary</li>
-        <li>Quinoa</li>
-        <li>Walnuts</li>
-        <li>Honey</li>
-        <li>Dijon Mustard</li>
-        <li>Cayenne Pepper</li>
-        <li>Cinnamon</li>
-        <li>Nutmeg</li>
-        <li>Vanilla Extract</li>
-        <li>Chickpeas</li>
-        <li>Soy Sauce</li>
-        <li>Ginger</li>
-        <li>Bay Leaves</li>
+        <a href="recipes.html"><li>Recipes</li></a>
+        <a href="FinalAssignment/guides.html"><li>Guides</li></a>
+        <a href="/ingredients.html"><li>Ingredients</li></a>
+        <a href="/diets.html"><li>Sort by Diet</li></a>
+        <a href="/inseason.html"><li>In-Season</li></a>
       </ul>
     </div>
 
+    <div class="error-box">
+        <h1>Error 404 <i class="fa-regular fa-face-sad-tear"></i></h1>
+        <p>Whoops! Looks like we're out of ingredients. Our chefs will be on it ASAP!</p>
+    </div>
     <!-- Footer -->
+
     <footer>
       <img src="CSS/images/GCLogo.svg" alt="GoodCook 2023" />
       <p>Get fresh recipes, cooking tips, and more!</p>
@@ -143,6 +104,5 @@
         });
       </script>
     </footer>
-
   </body>
 </html>
