--- a/fall.html
+++ b/fall.html
@@ -59,62 +59,62 @@
       </script>
     </header>
 
-    <!-- Ingredients -->
-    <div class="ingredients-list">
-      <h1>Dive into your next dish:</h1>
-      <ul>
-        <li>Tomatoes</li>
-        <li>Onions</li>
-        <li>Garlic</li>
-        <li>Bell Peppers</li>
-        <li>Carrots</li>
-        <li>Broccoli</li>
-        <li>Chicken</li>
-        <li>Beef</li>
-        <li>Pork</li>
-        <li>Salmon</li>
-        <li>Shrimp</li>
-        <li>Spinach</li>
-        <li>Kale</li>
-        <li>Potatoes</li>
-        <li>Sweet Potatoes</li>
-        <li>Avocado</li>
-        <li>Strawberries</li>
-        <li>Blueberries</li>
-        <li>Apples</li>
-        <li>Oranges</li>
-        <li>Lemons</li>
-        <li>Limes</li>
-        <li>Garlic Powder</li>
-        <li>Cumin</li>
-        <li>Paprika</li>
-        <li>Black Pepper</li>
-        <li>Paprika</li>
-        <li>Olive Oil</li>
-        <li>Balsamic Vinegar</li>
-        <li>Cucumber</li>
-        <li>Cherry Tomatoes</li>
-        <li>Zucchini</li>
-        <li>Eggs</li>
-        <li>Cheddar Cheese</li>
-        <li>Parmesan Cheese</li>
-        <li>Coriander</li>
-        <li>Cilantro</li>
-        <li>Thyme</li>
-        <li>Rosemary</li>
-        <li>Quinoa</li>
-        <li>Walnuts</li>
-        <li>Honey</li>
-        <li>Dijon Mustard</li>
-        <li>Cayenne Pepper</li>
-        <li>Cinnamon</li>
-        <li>Nutmeg</li>
-        <li>Vanilla Extract</li>
-        <li>Chickpeas</li>
-        <li>Soy Sauce</li>
-        <li>Ginger</li>
-        <li>Bay Leaves</li>
-      </ul>
+    <div class="fall-ingredients-list">
+        <h1>Here's what in store for Fall in: <button id="fall-button">California!</button></h1>
+        <ul>
+            <li>Pumpkin</li>
+            <li>Butternut Squash</li>
+            <li>Acorn Squash</li>
+            <li>Sweet Potatoes</li>
+            <li>Brussels Sprouts</li>
+            <li>Kale</li>
+            <li>Broccoli</li>
+            <li>Cauliflower</li>
+            <li>Turnips</li>
+            <li>Carrots</li>
+            <li>Beets</li>
+    
+        </ul>
+    </div>
+
+    <!-- Recipes -->
+    <div class="fall-recipes-container-grid">
+      <div class="fall-recipes-item" id="fall-recipes-griditem1">
+        <a href=""><h1>Cinnamon Babka</h1></a>
+      </div>
+      <div class="fall-recipes-item" id="fall-recipes-griditem2">
+        <a href=""><h1>Crispy Rice Stew</h1></a>
+      </div>
+      <div class="fall-recipes-item" id="fall-recipes-griditem3">
+        <a href=""><h1>Oatmeal Congee</h1></a>
+      </div>
+      <div class="fall-recipes-item" id="fall-recipes-griditem4">
+        <a href=""><h1>Baking Bliss: A Beginner's Guide</h1><p>Dive into the world of baking. Uncover essential techniques, ingredient tips, and simple recipes to elevate your baking skills and create delectable treats.</p></a>
+      </div>
+      <div class="fall-recipes-item" id="fall-recipes-griditem5">
+        <a href=""><h1>Tomato Caprese</h1></a>
+      </div>
+      <div class="fall-recipes-item" id="fall-recipes-griditem6">
+        <a href=""><h1>Guide: Grilling Greatness Unleashed</h1><p>Elevate your grilling game! From choosing the right cuts to mastering the perfect sear, this guide unlocks the secrets to flavorful and juicy grilled delights.</p></a>
+      </div>
+      <div class="fall-recipes-item" id="fall-recipes-griditem7">
+        <a href=""><h1>Tteokbokki</h1></a>
+      </div>
+      <div class="fall-recipes-item" id="fall-recipes-griditem8">
+        <a href=""><h1>American Homestyle Waffles</h1></a>
+      </div>
+      <div class="fall-recipes-item" id="fall-recipes-griditem9">
+        <a href=""><h1>Biscuits</h1></a>
+      </div>
+      <div class="fall-recipes-item" id="fall-recipes-griditem10">
+        <a href=""><h1>Sweet and Sour Chicken</h1></a>
+      </div>
+      <div class="fall-recipes-item" id="fall-recipes-griditem11">
+        <a href=""><h1>Classic Chicken Sandwich</h1></a>
+      </div>
+      <div class="fall-recipes-item" id="fall-recipes-griditem12">
+        <a href=""><h1>Mashed Potatoes</h1></a>
+      </div>
     </div>
 
     <!-- Footer -->
